--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@hookform/resolvers": "^3.3.2",
     "axios": "^1.6.2",
     "js-cookie": "^3.0.5",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
     "sonner": "^1.2.4",
     "swr": "^2.2.4",
+    "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
