--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-select": "^5.8.0",
     "sonner": "^1.2.4",
     "swr": "^2.2.4",
     "zod": "^3.22.4",
