--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.17",
     "@hookform/resolvers": "^3.3.2",
     "axios": "^1.6.2",
+    "clsx": "^2.0.0",
     "js-cookie": "^3.0.5",
     "next": "14.0.3",
     "react": "^18",
@@ -20,6 +21,7 @@
     "react-select": "^5.8.0",
     "sonner": "^1.2.4",
     "swr": "^2.2.4",
+    "tailwind-merge": "^2.1.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
