--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-qr-code": "^2.0.12",
     "react-select": "^5.8.0",
     "sonner": "^1.2.4",
     "swr": "^2.2.4",
