--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.298.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
