fix(user): fix like unlike, now can do both without refresh

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db": " json-server --watch db.json --port 8000 --host 10.20.191.157",
+    "db": " json-server --watch db.json --port 8080",
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
@@ -26,6 +26,7 @@
     "sonner": "^1.2.4",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.1.0",
+    "tailwindcss-animated": "^1.0.1",
     "vite-tsconfig-paths": "^4.2.2",
     "zustand": "^4.4.7"
   },
