--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "db": "json-server --watch --host 10.20.191.157 db.json --port 8080",
-    "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
@@ -27,20 +28,23 @@
     "swr": "^2.2.4",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animated": "^1.0.1",
+    "ts-node": "^10.9.2",
     "vite-tsconfig-paths": "^4.2.2",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^23.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
